--- a/warmovis/index.html
+++ b/warmovis/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Reader for EZM</title>
-    <meta property="og:title" content="Reader for EZM" />
+    <title>Hinge Problems Warmovis</title>
+    <meta property="og:title" content="Hinge Problems Warmovis" />
 
-    <meta name="description" content="An electric zine" />
-    <meta property="og:description" content="An electric zine" />
+    <meta name="description" content="A Hinge Problems Warmovis zine" />
+    <meta property="og:description" content="A Hinge Problems Warmovis zine" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="./pages/FRONT.png" type="image/png" />
