--- a/warmovis/index.html
+++ b/warmovis/index.html
@@ -10,8 +10,8 @@
     <meta property="og:description" content="A Hinge Problems Warmovis zine" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="./pages/FRONT.png" type="image/png" />
-    <link rel="apple-touch-icon" href="./pages/FRONT.png" type="image/png" />
+    <link rel="icon" href="./pages/icon.png" type="image/png" />
+    <link rel="apple-touch-icon" href="./pages/icon.png" type="image/png" />
     <style>
         html,
         body {
