--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 Oh hey, here is a list of zines on here
 <ul>
   <li><a href="https://boojiboy7.github.io/zines/warmovis/">WARMOVIS #1</a>
-  <li><a href="https://boojiboy7.github.io/zines/practical_cat_summoning/">Gary's Guide To Practical Cat Summoning</a>
+  <li><a href="https://boojiboy7.github.io/zines/practical_cat_summoning/">Gary's Fanzine of Practical Cat Summoning</a>
 </ul>
