--- a/practical_cat_summoning/index.html
+++ b/practical_cat_summoning/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Gary's Guide to Practical Cat Summoning</title>
-    <meta property="og:title" content="Gary's Guide to Practical Cat Summoning" />
+    <title>Gary's Fanzine of Practical Cat Summoning</title>
+    <meta property="og:title" content="Gary's Fanzine of Practical Cat Summoning" />
 
     <meta name="description" content="An electric zine" />
     <meta property="og:description" content="An electric zine" />
