--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
-Oh hey, here is a list of zines on here
+<html>
+<head>
+<style>
+h1 {
+  font-size: 2.5em; /* 40px/16=2.5em */
+}
+
+h2 {
+  font-size: 2em; /* 30px/16=1.875em */
+ }
+
+p {
+  font-size: 1em; /* 14px/16=0.875em */
+}
+</style>
+</head>
+<body>
+
+<h1>Oh hey, here is a list of zines on here</h1>
 <ul>
   <li><a href="https://boojiboy7.github.io/zines/warmovis/">WARMOVIS #1</a>
   <li><a href="https://boojiboy7.github.io/zines/practical_cat_summoning/">Gary's Fanzine of Practical Cat Summoning</a>
 </ul>
+</body>
+</html>
