--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@ p {
 <body>
 
 <h1>Oh hey, here is a list of zines on here</h1>
-<ul>
-  <li><a href="https://boojiboy7.github.io/zines/warmovis/">WARMOVIS #1</a>
-  <li><a href="https://boojiboy7.github.io/zines/practical_cat_summoning/">Gary's Fanzine of Practical Cat Summoning</a>
-</ul>
+<a href="https://boojiboy7.github.io/zines/warmovis/">
+  <img alt="warmovis 1" src="https://boojiboy7.github.io/zines/warmovis/pages/FRONT.png"
+         width="421" height="595">
+  </a>
+ <a href="https://boojiboy7.github.io/zines/practical_cat_summoning/">
+   <img alt="cat summoning" src="https://boojiboy7.github.io/zines/practical_cat_summoning/pages/FRONT.png"
+         width="421" height="595">
+  </a>
 </body>
 </html>
