--- a/warmovis/index.html
+++ b/warmovis/index.html
@@ -103,7 +103,7 @@
 
 <body>
     <noscript>This electric zine requires javascript to be enabled.</noscript>
-    <div id="loading">loading zine...</div>
+    <div id="loading">...totally...scarring...warmovis...</div>
     <script src="ezmreader.js"></script>
 </body>
 
