--- a/daphny/index.html
+++ b/daphny/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Reader for EZM</title>
-    <meta property="og:title" content="Reader for EZM" />
+    <title>daphnyzine</title>
+    <meta property="og:title" content="daphnyzine" />
 
     <meta name="description" content="An electric zine" />
     <meta property="og:description" content="An electric zine" />
