--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@ p {
    <img alt="cat summoning" src="https://boojiboy7.github.io/zines/practical_cat_summoning/pages/FRONT.png"
          width="421" height="595">
   </a>
+  <a href="https://boojiboy7.github.io/zines/daphny/">
+   <img alt="cat summoning" src="https://boojiboy7.github.io/zines/daphny/FRONT.png"
+         width="421" height="595">
+  </a>
 </body>
 </html>
