--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ p {
          width="421" height="595">
   </a>
   <a href="https://boojiboy7.github.io/zines/daphny/">
-   <img alt="cat summoning" src="https://boojiboy7.github.io/zines/daphny/FRONT.png"
+   <img alt="daphnyzine" src="https://boojiboy7.github.io/zines/daphny/pages/FRONT.png"
          width="421" height="595">
   </a>
 </body>
