--- a/11_speccy/index.html
+++ b/11_speccy/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Reader for EZM</title>
-    <meta property="og:title" content="Reader for EZM" />
+    <title>Eleven ZX Spectrum Games of Interest</title>
+    <meta property="og:title" content="Eleven ZX Spectrum Games of Interest" />
 
     <meta name="description" content="An electric zine" />
     <meta property="og:description" content="An electric zine" />
