--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@ p {
    <img alt="daphnyzine" src="https://boojiboy7.github.io/zines/daphny/pages/FRONT.png"
          width="421" height="595">
   </a>
+  <a href="https://boojiboy7.github.io/zines/11_speccy/">
+   <img alt="daphnyzine" src="https://boojiboy7.github.io/zines/11_speccy/pages/FRONT.png"
+         width="421" height="595">
+  </a>
 </body>
 </html>
