--- a/index.html
+++ b/index.html
@@ -16,20 +16,23 @@ p {
 </head>
 <body>
 
-<h1>Oh hey, here is a list of zines on here</h1>
-<a href="https://boojiboy7.github.io/zines/warmovis/">
+<h1><p style="text-align:center">Oh hey, here is a list of zines on here</h1>
+<a href="https://boojiboy7.github.io/zines/warmovis/"><p style="text-align:center">
   <img alt="warmovis 1" src="https://boojiboy7.github.io/zines/warmovis/pages/FRONT.png"
          width="421" height="595">
   </a>
- <a href="https://boojiboy7.github.io/zines/practical_cat_summoning/">
+  <br>
+ <a href="https://boojiboy7.github.io/zines/practical_cat_summoning/"><p style="text-align:center">
    <img alt="cat summoning" src="https://boojiboy7.github.io/zines/practical_cat_summoning/pages/FRONT.png"
          width="421" height="595">
   </a>
-  <a href="https://boojiboy7.github.io/zines/daphny/">
+  <br>
+  <a href="https://boojiboy7.github.io/zines/daphny/"><p style="text-align:center">
    <img alt="daphnyzine" src="https://boojiboy7.github.io/zines/daphny/pages/FRONT.png"
          width="421" height="595">
   </a>
-  <a href="https://boojiboy7.github.io/zines/11_speccy/">
+  </br>
+  <a href="https://boojiboy7.github.io/zines/11_speccy/"><p style="text-align:center">
    <img alt="daphnyzine" src="https://boojiboy7.github.io/zines/11_speccy/pages/FRONT.png"
          width="638" height="825">
   </a>
